// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Letter /> highlights correct 1`] = `
<div>
  <button
    class="css-1p99edz"
  >
    a
  </button>
</div>
`;

exports[`<Letter /> highlights incorrect 1`] = `
<div>
  <button
    class="css-1j52w6s"
  >
    a
  </button>
</div>
`;

exports[`<Letter /> renders 1`] = `
<div>
  <button
    class="css-fg2fpd"
  >
    a
  </button>
</div>
`;
